styles.css
body {
    background: rgb(24,24,24);
    color: #ccc;
    font-family: Futura-Medium, sans-serif;
    font-size: 12pt;
    overflow: hidden;
}

canvas {
    z-index: -1;
    position: absolute;
    top: 0;
    left: 0;
}

#content {
    position: relative;
    max-width: 640px;
    overflow: hidden;
    background: transparent;
}

.section {
    border-radius: 10px;
    background: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#444), to(#222));
    background: linear-gradient(to bottom, #444, #222 100%);
    color: #ccc;
    padding: 10px;
    margin: 5px 10px;
    width: 600px;
}

#current_time {
    width: 100%;
    background: transparent;
    clear: both;
    font-size: 8pt;
    text-align: center;
}

a {
    color: #6cf;
    text-decoration: none;
}

a:visited {
    color: #f66;
}

a:active {
    color: #6f6;
}

.section ol a .subject {
    text-decoration: underline;
}

.section ol a .owner, .section ol a .project {
    color: #ccc;
    font-size: 80%;
}

h1, h2, h3 {
    text-align: center;
    margin: 0;
    padding: 1px;
    margin-bottom: 10px;
}

h1 {
    padding: 10px;
}

#activity_spark>div {
    width: 100%;
    margin: 0 auto;
    padding: 0 20%;
}

#activity_spark>div>div {
    width: 30%;
    display: inline-block;
    margin: 0 auto;
    padding: 0;
    text-align: center;
}

#activity_spark label {
    width: 100%;
    text-align: center;
    display: block;
    font-size: 80%;
}

#activity_spark a {
    text-decoration: none;
    color: #ccc;
}

#review_stats {
    width: 600px;
}

#review_stats .value {
    color: #6f6;
}

#review_stats div>span {
    width: 50%;
    display: inline-block;
    margin: 0 auto;
    padding: 0;
}

#winning {
    text-align: center;
}

@media handheld, only screen and (max-device-width: 480px) {
    /* iPhone */
    body {
        width: 100%;
        margin: 0;
        padding: 0;
        font-size: 10pt;
    }
    .section {
        display: block;
        width: 90%;
        margin: 0 auto 10px;
        padding: 10px;
    }
}

@media(min-width:1315px){
    #content {
      max-width: 1240px;
      overflow: hidden;
    }
    #review_stats {
        width: 1240px;
    }
    #review_stats h3 {
        display: none;
    }
    #review_stats div {
        width: 16%;
        display: inline;
        float: left;
        margin: 0;
        padding: 2px 0;
        font-size: 75%;
    }
    #review_stats div>span {
        display: block;
        width: 100%;
        text-align: center;
    }
    .section{
      float:left;
      padding: 0;
      margin: 5px 0;
    }
    #community_stars, #activity_spark {
      float:right;
    }
}

/*
for the wall-mounted TV
*/
@media (min-width:1820px) {
    body {
        background: #000;
        font-size: 18pt;
        line-height: 24pt;
        overflow: hidden;
    }
    #content {
        max-width: 1800px;
    }
    #review_stats {
        min-width: 1750px;
    }
    #review_stats h3 {
        display: none;
    }
    #review_stats div {
        width: 16%;
        display: inline;
        float: left;
        margin: 0;
        padding: 0;
        font-size: 75%;
    }
    #review_stats div>span {
        display: block;
        width: 100%;
        text-align: center;
    }
    .section{
        background: #222;
        float: left;
        width: 850px;
        padding: 10px;
        padding-left: 20px;
        margin: 5px 8px;
    }
    .section ol a .subject {
        text-decoration: none;
    }
    #community_stars, #activity_spark {
        float: right;
    }
    #activity_spark label {
        font-size: 70%;
    }
}

